--- a/introduction/index.org
+++ b/introduction/index.org
@@ -3,6 +3,7 @@
 #+REVEAL_TRANS: slide
 #+REVEAL_EXTRA_CSS: ../css/custom.css
 #+REVEAL_EXTRA_CSS: ../css/font-awesome.min.css
+#+REVEAL_EXTRA_JS: ../js/google_analytics.js
 #+REVEAL_PLUGINS: (zoom notes)
 #+OPTIONS: num:nil reveal_title_slide:nil reveal_history:true
 
@@ -101,3 +102,5 @@
 ** 
   
   #+REVEAL_HTML: <img src="../images/result.png" style="width: 100%;" >
+
+#+REVEAL_HTML: <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-66064598-1', 'auto'); ga('send', 'pageview'); </script>
